--- a/config/database.yml
+++ b/config/database.yml
@@ -2,13 +2,26 @@ default: &default
   adapter: mysql2
   encoding: utf8mb4
   reconnect: false
-  url: <%= ENV.fetch('DATABASE_URL') %>
-
-test:
-  <<: *default
 
 development:
-  <<: *default
+  adapter: mysql2
+  encoding: utf8mb4
+  reconnect: false
+  database: gn_dev
+  socket: /tmp/mysql.sock
+  username: admin
+  password: gathergather
+  
+test:
+  adapter: mysql2
+  encoding: utf8mb4
+  reconnect: false
+  database: gn_test
+  socket: /tmp/mysql.sock
+  username: admin
+  password: gathergather
 
 production:
   <<: *default
+  url: <%= ENV.fetch('DATABASE_URL', '') %>
+
